1.3.3 snap (#2)
* [Issue93] Add GDAL Raster Mask band support

# Conflicts:
#	plugin/tiff/src/main/java/it/geosolutions/imageioimpl/plugins/tiff/TIFFImageReader.java
#	plugin/tiff/src/test/java/it/geosolutions/imageio/tiff/TIFFReadTest.java

* #107 Dispose image compressors/decompressors along with the reader

# Conflicts:
#	plugin/tiff/src/main/java/it/geosolutions/imageio/plugins/tiff/TIFFDecompressor.java
#	plugin/tiff/src/main/java/it/geosolutions/imageioimpl/plugins/tiff/TIFFImageReader.java

* adding travis support for this branch

# Conflicts:
#	.travis.yml

* JDK6 build out, no longer supported, JDK8 build in

* Release early tiff metadata and friends, the reader can get into the finalizer queue when imageio deferred loading is used, if that happens we don't want to carry around baggage

* Issue#113: Supporting emptyTiles and noData fill

# Conflicts:
#	plugin/tiff/src/main/java/it/geosolutions/imageio/plugins/tiff/PrivateTIFFTagSet.java
#	plugin/tiff/src/main/java/it/geosolutions/imageio/plugins/tiff/TIFFDecompressor.java
#	plugin/tiff/src/test/java/it/geosolutions/imageio/tiff/TIFFReadTest.java

* Removing auto-close of stream on reader.dispose which makes ImageIO.read Unhappy

* Issue117: TIFF LZW/DEFLATE Decompressor doesn't support 16 bits for Horizontal differencing Predictor (#119) (#120)

* TIFF/LZW decoder, predictor for 16-bit samples
Horizontal differencing Predictor supports decoding of 16-bit samples if
all channels are 16-bit wide.
* Issue#117: Fixing TIFF LZW/Deflate decompressor supporting 16 bit horizontal diff predictor + Tests

* #121-Add bands support to EnhancedImageReadParam

* pass in sourceBands

* Release early tiff metadata and friends, the reader can get into the finalizer queue when imageio deferred loading is used, if that happens we don't want to carry around baggage

# Conflicts:
#	plugin/tiff/src/main/java/it/geosolutions/imageioimpl/plugins/tiff/TIFFImageReader.java

* Issue#113: 